add exceptions and fields validation
